...
                .font(.footnote)
            
            Chart(medicalData, id: \.id)  { dat in
               
                ForEach(dat.history as! [MedicationHistory]){ hist in
                    LineMark(
                        x: .value("Medication", hist.dosageTime) ,
                        y: .value("Dose", hist.dose)
                    )
                    
                }.foregroundStyle(by: .value("Medication", dat.id))
                .symbol(by: .value("Medication", dat.id))
            }.accessibilityIdentifier("medicationChart")
        }
        List(history){ med in
            Text("\(med.dose) \(med.administration.rawValue)(s) of \(med.title) taken at \(med.dosageTime, format: Date.FormatStyle(date:.numeric, time: .shortened))")
        }
    }
}
...
