...
                        x: .value("Start Time", cont.startTime) ,
                        y: .value("Total Duration", cont.endTime.timeIntervalSince(cont.startTime) / 60)
                    )
                }.foregroundStyle(by: .value("Contemplation Technique", dat.id))
                    .symbol(by: .value("Contemplation Technique", dat.id))
                
            }.accessibilityIdentifier("contemplationChart")
        }
        
        List(history){ contemplation in
            Text("\(contemplation.technique.rawValue) done between \(contemplation.startTime, format: Date.FormatStyle(date:.numeric, time: .shortened)) and \(contemplation.endTime, format: Date.FormatStyle(date:.numeric, time: .shortened))")
            
        }.accessibilityIdentifier("contemplationList")
    }
}



#Preview {
...
