...
        VStack {
            Form {
                Text("Name: \(workout.exercise.rawValue)")
                
                if workout.exercise.measurement == .repsAndSets{
                    Section {
                        TextField("Sets:", value: $sets, format: .number)
                            .keyboardType(.numberPad)
                    } header: {
                        Text("Sets")
                    } footer: {
                        Text("Sets can not be zero")
                            .foregroundStyle( hasErrors ? .red : .secondary)
                    }
                    
                    Section {
                        TextField("Reps:", value: $reps, format: .number)
                            .keyboardType(.numberPad)
                    } header: {
                        Text("Reps")
                    } footer: {
                        Text("Reps can not be zero")
                            .foregroundStyle( hasErrors ? .red : .secondary)
...
